# codstattracker

./: .gitignore  Dockerfile  Makefile  README.md  generate_migrations.py  pyproject.toml
.github/workflows/: CI.yml  ci.yml
codstattracker/: app.py  base_model.py  log.py  logging.py  poller.py
codstattracker/api/: exceptions.py  interfaces.py  models.py
codstattracker/api/mycallofduty/: __init__.py  models.py  mw.py  wz.py
codstattracker/poller/: __main__.py  impl.py  interfaces.py  main.py  settings.py
codstattracker/storage/: exceptions.py  interfaces.py  loggable.py
codstattracker/storage/msql/: __init__.py  models.py  storages.py
codstattracker/storage/sql/: __init__.py  ext.py  models.py  storages.py
docker/: base.Dockerfile  integration-test-compose.yaml
migrations/: 01-add-columns.py  01.add-basic-tables.down.sql  01.add-basic-tables.up.sql  env.py
migrations/versions/: 00_root.py  01_create_base_tables.py  02_adds_matches_log_table.py
tests/: conftest.py
tests/api/: test_models.py  test_wz_api.py
tests/api/assets/: __init__.py  success-response-a-bit-broken.json  success-response-wz.json  success-response.json  user-not-found-response.json
tests/cli/: test_app_ctx.py
tests/storage/mysql/: conftest.py  test_models.py  test_storage.py  utils.py
tests/storage/sql/: conftest.py  test_migrations.py  test_models.py  test_storage.py  utils.py
tests/test_api/: test_wz_api.py
