[tool.poetry]
name = "codstatstracker"
version = "0.1.0"
description = "App to poll and collect your COD stats"
authors = ["Daniel Daniels <danields761@gmail.com>"]
license = "NPOSL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
