[tool.poetry]
name = "codstattracker"
version = "0.1.0"
description = "App to poll and collect your COD stats"
authors = ["Daniel Daniels <danields761@gmail.com>"]
license = "NPOSL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
requests = "^2.24.0"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tools configuration
[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["publishing", "migrations", "tests"]
